--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
 edition = "2018"
 
 [dependencies]
-tide = { git = "https://github.com/Nemo157/tide.git", branch = "futures-alpha.15" }
-structopt = "0.2.15"
-web-push = "0.4.2"
-serde = { version = "1.0.90", features = ["derive"] }
+tide = "0.2"
+structopt = "0.2"
+web-push = "0.4"
+serde = { version = "1.0", features = ["derive"] }
 futures-preview = { version = "0.3.0-alpha.15", features = ["compat"] }
