keep up with tide

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,13 @@ authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
 edition = "2018"
 
 [dependencies]
-tide = "0.2"
+tide = { git = "https://github.com/rustasync/tide" }
+tide-log = { git = "https://github.com/rustasync/tide" }
 structopt = "0.2"
 web-push = "0.4"
 serde = { version = "1.0", features = ["derive"] }
-futures-preview = { version = "0.3.0-alpha.15", features = ["compat"] }
+futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
+
+[patch.crates-io]
+http-service = { git = "https://github.com/rustasync/http-service" }
+http-service-hyper = { git = "https://github.com/rustasync/http-service" }
