--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,8 @@ authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
 edition = "2018"
 
 [dependencies]
-tide = { git = "https://github.com/rustasync/tide" }
-tide-log = { git = "https://github.com/rustasync/tide" }
+warp = "0.2"
+tokio = { version = "0.2", features = ["macros"] }
 structopt = "0.3"
-web-push = "0.5"
+web-push = "0.6"
 serde = { version = "1.0", features = ["derive"] }
-futures-preview = { version = "0.3.0-alpha.17", features = ["compat"] }
