--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
 edition = "2018"
 
 [dependencies]
-warp = "0.2"
+warp = { version = "0.2", default-features = false }
 tokio = { version = "0.2", features = ["macros"] }
 structopt = "0.3"
-web-push = "0.6"
+web-push = "0.7"
 serde = { version = "1.0", features = ["derive"] }
