--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ edition = "2018"
 [dependencies]
 warp = { version = "0.2", default-features = false }
 tokio = { version = "0.2", features = ["macros"] }
-structopt = "0.3"
+clap = { version = "3.0.0-beta.2" }
 web-push = "0.7"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1", features = ["derive"] }
