--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tokio = { version = "0.2", features = ["macros"] }
 clap = { version = "3.0.0-beta.2" }
 web-push = "0.7"
 serde = { version = "1", features = ["derive"] }
+openssl = { version = "0.10", features = ["vendored"] }
