--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
 edition = "2018"
 
 [dependencies]
-warp = { version = "0.2", default-features = false }
-tokio = { version = "0.2", features = ["macros"] }
-clap = { version = "3.0.0-beta.2" }
-web-push = "0.7"
+warp = { version = "0.3", default-features = false }
+tokio = { version = "1", features = ["full"] }
+clap = { version = "3.0.0-beta.4" }
+web-push = "0.8"
 serde = { version = "1", features = ["derive"] }
 openssl = { version = "0.10", features = ["vendored"] }
