--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ edition = "2018"
 warp = { version = "0.3", default-features = false }
 tokio = { version = "1", features = ["full"] }
 clap = { version = "3.0.0-beta.4" }
-web-push = "0.8"
+web-push = { version = "0.9", features = ["hyper-client"], default-features = false }
 serde = { version = "1", features = ["derive"] }
 openssl = { version = "0.10", features = ["vendored"] }
