niklasf -> lichess-org

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "lila-push"
 version = "1.0.0"
 publish = false
 description = "Web push microservice for lichess.org"
-repository = "https://github.com/niklasf/lila-push"
+repository = "https://github.com/lichess-org/lila-push"
 readme = "README.md"
 license = "AGPL-3.0+"
 authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
