--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ edition = "2021"
 
 [dependencies]
 axum = "0.4"
-tokio = { version = "1", features = ["full"] }
 clap = { version = "3", features = ["derive"] }
-web-push = { version = "0.9", features = ["hyper-client"], default-features = false }
-serde = { version = "1", features = ["derive"] }
+env_logger = "0.9"
+log = "0.4"
 openssl = { version = "0.10", features = ["vendored"] }
+serde = { version = "1", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
+web-push = { version = "0.9", features = ["hyper-client"], default-features = false }
