--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ axum = "0.5"
 clap = { version = "3", features = ["derive"] }
 env_logger = "0.9"
 log = "0.4"
-openssl = { version = "0.10", features = ["vendored"] }
+hyper-tls = { version = "0.5", features = ["vendored"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 web-push = { version = "0.9", features = ["hyper-client"], default-features = false }
