--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ hyper-tls = "0.5"
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 web-push = { git = "https://github.com/niklasf/rust-web-push.git", branch = "lichess", features = ["hyper-client"], default-features = false }
+listenfd = "1"
