--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,16 +38,15 @@ jobs:
       - name: Configure SSH
         run: |
           mkdir -p ~/.ssh
-          touch ~/.ssh/deploy.key
-          chmod 600 ~/.ssh/deploy.key
-          echo "$SSH_KEY" > ~/.ssh/deploy.key
+          touch ~/.ssh/id_deploy
+          chmod 600 ~/.ssh/id_deploy
+          echo "$SSH_KEY" > ~/.ssh/id_deploy
           echo "$SSH_HOST $SSH_HOST_KEY" > ~/.ssh/known_hosts
           cat >>~/.ssh/config <<END
           Host deploy-host
             HostName $SSH_HOST
             User $SSH_USER
-            IdentityFile ~/.ssh/deploy.key
-            ForwardAgent no
+            IdentityFile ~/.ssh/id_deploy
             StrictHostKeyChecking yes
           END
         env:
